# fp-homeworks

./: README.md  stack.yaml
hw1/: README.md  hw1.cabal
hw1/src/: Block1And2.hs  DaysAndVectors.hs  Lib.hs  Monsters.hs  Nats.hs  Tree.hs
hw1/test/: Block1And2.hs  DaysAndVectors.hs  TestB1And2.hs  TestDaysVectors.hs  TestNats.hs
hw2/: README.md  hw2.cabal
hw2/proofs/: ChaoticProofs.hs  FishesProofs.hs  MonadParserProofs.hs  PartialFunctionsProofs.hs
hw2/src/: .#BTCChaotic.hs  AParser.hs  BTCChaotic.hs  BTCFishesFish.hs  BTCFishesJoin.hs  BTCFishesMonad.hs  BaseTypeClasses.hs  BaseTypeClassesChaotic.hs  BaseTypeClassesFishes.hs  Lib.hs  MonadParse.hs  MonadParser.hs  OptionalMonads.hs  PartialFunctions.hs  PartialFunctionsProofs.hs  SExpr.hs
hw2/test/: AParserSpec.hs  MonadParserSpec.hs  NonDetEvalSpec.hs  OptionalMonadsSpec.hs  SExprSpec.hs
hw3/: README.md  hw3.cabal
hw3/app/: Main.hs  input.txt
hw3/src/: AExpr.hs  AExprParser.hs  Expr.hs  ExprParser.hs  Interpreter.hs  InterpreterIO.hs  Vars.hs  VarsParser.hs
hw3/test/: AExprParserSpec.hs  InterpreterSpec.hs
hw4/: README.md  hw4.cabal
hw4/app/: Main.hs
hw4/src/: BaseLenses.hs  ChangeFS.hs  FSLenses.hs  Renew.hs  ShowT.hs  TmpHs.hs  TraverseFS.hs
hw4/test/: AExprSpec.hs  BaseLensesSpec.hs  ChangeFSSpec.hs  TmpHsSpec.hs  TraverseFSSpec.hs  VarsParserSpec.hs
