name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com/username/TemplateHW/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Your Name
maintainer:          example@gmail.com
copyright:           2017 Aydar Gizatullin

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     OptionalMonads
                     , AParser
                     , SExpr
                     , MonadParser
                     , BTCChaotic
                     , BTCFishesMonad
                     , BTCFishesFish
                     , BTCFishesJoin
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.9 && < 5
                     , containers >= 0.5.7.1
                     , hspec >= 2.4.4
                     , random >= 1.1
                     , syb >= 0.7
  default-language:    Haskell2010

test-suite hw2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       OptionalMonadsSpec
                     , NonDetEvalSpec
                     , AParserSpec
                     , SExprSpec
                     , MonadParserSpec
  build-depends:       base
                     , containers >= 0.5.7.1
                     , hspec
                     , hspec >= 2.4.4
                     , hw2
                     , random >= 1.1
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
