name:                hw3
version:             0.1.0.0
synopsis:            Synopsis for task 3
description:         Task 3 for FP ITMO course

homepage:            https://github.com/username/TemplateHW/tree/master/hw3#readme
license:             MIT
license-file:        LICENSE
author:              Aydar Gizatullin
maintainer:          aydar.gizatullin@gmail.com
copyright:           2017 Aydar Gizatullin

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Expr
  ghc-options:         -Wall
  build-depends:       MissingH
                     , base >= 4.9 && < 5
                     , containers
                     , megaparsec
                     , mtl >= 2.2.1
                     , transformers >= 0.5.2.0
  default-language:    Haskell2010

executable hw3
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw3
                     , mtl >= 2.2.1
                     , transformers >= 0.5.2.0
  default-language:    Haskell2010

test-suite hw3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec-megaparsec
                     , hw3
                     , mtl >= 2.2.1
                     , transformers >= 0.5.2.0
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
