name:                hw4
version:             0.1.0.0
synopsis:            Synopsis for task 4
description:         Task 4 for FP ITMO course

homepage:            https://github.com/username/TemplateHW/tree/master/hw4#readme
license:             MIT
license-file:        LICENSE
author:              Aydar Gizatullin
maintainer:          aydar.gizatullin@gmail.com
copyright:           2017 Aydar Gizatullin

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     TmpHs
                     , ShowT
                     , BaseLenses
                     , FSLenses
  ghc-options:         -Wall
  build-depends:       cond >= 0.4.1.1
                     , directory >= 1.2.0.0
                     , filepath >= 1.4.1.1
                     , filesystem-trees >= 0.1.0.6
                     , lens >= 4.15.4
                     , template-haskell >= 2.11.1.0
                     , text >= 1.2.2.2
                     , pointed >= 5
                     , base >= 4.9 && < 5
  default-language:    Haskell2010

executable hw4
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.9 && < 5
                     , hw4
  default-language:    Haskell2010

test-suite hw4-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       
  build-depends:       base                     
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
